# modbus_sim

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker_compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 520bb0368106_initial_tables.py  aecca16fe961_initial_tables.py  f53521410aab_initial_tables.py
api/: Dockerfile  pyproject.toml
api/api/app/: database.py  main.py
api/api/app/models/: device.py  register.py  telemetry.py
api/api/app/routers/: devices.py  registers.py  system.py  telemetry.py  values.py
api/api/app/schemas/: register.py  values.py
app/: database.py
app/api/: main.py
app/api/routers/: devices.py  registers.py  system.py  telemetry.py  values.py
app/api/schemas/: device.py  register.py  system.py  telemetry.py  values.py
app/models/: device.py  register.py  telemetry.py
app/simulator/: main.py  modbus_server.py  strategies.py  strategy_factory.py
simulator/: Dockerfile  pyproject.toml
