[project]
name = "simulator"
version = "0.1.0"
description = "Modbus TCP server simulator"
authors = [
    {name = "michteau",email = "montiepy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymodbus (>=3.11.4,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
